# stateful-auth

./: .gitignore  README.md  artifact_evaluation.md  latency_baseline.csv  requirements.txt
Authorization_Server/: app.py
Authorization_Server/website/: auth_routes.py  models.py  oauth2.py  resource_routes.py  routes.py  utils.py
Client/: README.md  app.py  config.py
Client/history/: 7c24d2ae-4a98-4045-8ddd-f555d5a10427
Client/policies/: _all_policies.txt  deadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef.txt  macaroon.txt
Client/rust_policy/: README.md
Client/templates/: home.html  login.html  select_api.html
Client/update_program/: update_program.wasm
client/: app.py  config.py  utils.py
client/policies/: _all_policies.txt  deadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef.txt  macaroon.txt
client/rust_policy/modify_only_created_and_check_title_and_time/: Cargo.toml
client/rust_policy/modify_only_created_and_check_title_and_time/src/: main.rs
client/templates/: login.html  select_api.html
docs/: artifact_evaluation.md  installation.md  rust_policy.md  setup_aws.md
examples/: README.md
examples/gpt/: app.py  auth_routes.py  (+4 more)
historylib/: batch_history_list.py  client_utils.py  history.py  history_list.py  macaroon_utils.py  proxy_utils.py  server_utils.py
proxy/: app.py  auth_routes.py  models.py  oauth2.py  utils.py
scripts/: eval_latency.py  eval_macaroon.py  eval_tput.py  eval_tput_multi_thread.sh  latency_stateful.csv  plot.ipynb  server_log_summary.py
server/: app.py  run_server.sh
utils/: log.py
(+1003 files in other folders)
